--- a/pwa.html
+++ b/pwa.html
@@ -21,19 +21,19 @@
                 Калькулятор ИМТ
             </div>
             </div>
-            <div class="input-div">
+            <div class="input-div" id="height">
                 <label for="">Введите рост в сантиметрах</label>
                 <input type="number">
             </div>
-            <div class="input-div">
+            <div class="input-div" id="weight">
                 <label for="">Введите вес в килограммах</label>
                 <input type="number">
             </div>
-            <div class="input-div">
+            <div class="input-div" id="output">
                 <label for="">ИМТ</label>
                 <input type="number" readonly>
             </div>
-            <div class="input-div">
+            <div class="input-div" id="btn">
                 <button>Рассчитать</button>
             </div>
         </div>
