--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
                 <button>Рассчитать</button>
             </div>
         </div>
-        <script src="index.js"></script>
+        <script src="pwa.js"></script>
     </body>
 </html>
